# ChatPDF

./: .env.example  .founding-upstream-test.txt  .gitignore  Caddyfile  README.md  docker-compose.runtime.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260103_1528-3c5ae4533176_first_migration.py  20260409_0001-add_users_table.py  20260421_0001-b2c3d4e5f6a7_reconcile_db_head.py  20260428_0001-add_password_reset_to_users.py  20260428_0001-d4e5f6a7b8c9_add_images_tables.py  20260617_1639-2f68bf0fd8ec_add_word_count_to_pdfs.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: deps.py  router.py
backend/app/api/v1/endpoints/: auth.py  chat.py  health.py  image.py  pdf.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  chat.py  image.py  pdf.py  user.py
backend/app/inngest/: __init__.py  client.py
backend/app/inngest/functions/: __init__.py  pdf_processing.py
backend/app/schemas/: auth.py  chat.py  image.py  pdf.py
backend/app/services/: auth_service.py  chat_service.py  email_service.py  embeddings.py  image_service.py  llm_service.py  minio_service.py  vector_store.py
backend/app/utils/: pdf_utils.py  text_splitter.py  tusd_helpers.py
frontend/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ThemeProvider.tsx  ThemeToggle.tsx
(+32 files in other folders)
