[project]
name = "chatpdf-backend"
version = "0.1.0"
description = "PDF Chat Application Backend with FastAPI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.7",
    "alembic>=1.13.0",
    "pgvector>=0.2.4",

    # LangChain ecosystem (updated to latest 1.x)
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-community>=0.4.0",
    "langchain-core>=1.0.0",
    "openai>=1.12.0",

    # PDF processing (used by LangChain's PyPDFParser)
    "pypdf>=5.0.0",

    # Background jobs
    "inngest>=0.3.0",

    # Object storage
    "minio>=7.2.0",

    # Utilities
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    "httpx>=0.26.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
